# TorrServe_RSS_Updater

./: .gitignore  parser.py  pyproject.toml
