[tool.poetry]
name = "torrserver_rss_updater"
version = "1.0.2"
description = ""
authors = ["Chuvakstepan", "Kolovatoff"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
